--- a/my_app/templates/my_app/detail2.html
+++ b/my_app/templates/my_app/detail2.html
@@ -390,7 +390,7 @@
 
                                        <ul class="list-inline">
                                           {% for cat in categories %}
-                                          <li class="mb-2"><a class="text-secondary" href="{% url 'showcategory' cat.id %}">{{ cat.cat_name}} </a></li>
+                                          <li class="mb-2"><a class="text-secondary" href="{% url '' cat.id %}">{{ cat.cat_name}} </a></li>
                                           {% endfor %}
                                        </ul>
                                     </aside>   
