--- a/my_app/templates/my_app/listing.html
+++ b/my_app/templates/my_app/listing.html
@@ -37,7 +37,8 @@
 
                                        <ul class="list-inline">
                                           {% for cat in categories %}
-                                          <li class="mb-2"><a class="text-secondary" href="{% url 'showcategory' cat.id %}">{{ cat.cat_name}}</a></li>
+                                          <li class="mb-2 w-100"><a class="text-secondary w-100 d-flex justify-content-between" href="{% url 'listingshow' cat.id %}">{{ cat.cat_name}}<span style="text-aligin: right" class="text-sm-end d-flex">({{ cat.subcategory.count }})</span></a></li>
+
                                           {% endfor %}
                                        </ul>
                                     </aside>   
@@ -59,7 +60,8 @@
 
                                        <ul class="list-inline">
                                           {% for cat in subcategories %}
-                                          <li class="mb-2"><a class="text-secondary" href="{% url 'showcategory' cat.id %}">{{ cat.subcat_name}}</a></li>
+                                          <li class="mb-2 w-100"><a class="text-secondary w-100 d-flex justify-content-between" href="{% url 'listingshow' cat.id %}">{{ cat.subcat_name}}<span style="text-aligin: right" class="text-sm-end d-flex">({{ cat.products.count }})</span></a></li>
+
                                           {% endfor %}
                                        </ul>
                                     </aside>  
@@ -80,7 +82,7 @@
 
                                        <ul class="list-inline">
                                           {% for cat in restaurants %}
-                                          <li class="mb-2"><a class="text-secondary" href="{% url 'showcategory' cat.id %}">{{ cat.name}}</a></li>
+                                          <li class="mb-2 w-100"><a class="text-secondary w-100 d-flex justify-content-between" href="{% url 'detail' cat.id %}">{{ cat.name}}<span style="text-aligin: right" class="text-sm-end d-flex">({{ cat.products1.count }})</span></a></li>
                                           {% endfor %}
                                        </ul>
                                     </aside> 
@@ -130,46 +132,8 @@
                   {% endfor %}
                      
                   </div>
-                  <div class="row">
-                     {% for place in restaurants %}
-                     <div class="col-md-4 col-sm-6 mb-4 pb-2">
-                         <div class="list-card bg-white h-100 rounded overflow-hidden position-relative shadow-sm">
-                             <div class="list-card-image">
-                                 <!-- Display star rating badge -->
-                                 <div class="star position-absolute"><span class="badge badge-success"><i class="icofont-star"></i> {{ place.star_rating }} ({{ place.reviews_count }}+)</span></div>
-                                 <!-- Display favourite icon with link to detail page -->
-                                 <div class="favourite-heart text-danger position-absolute"><a href="{{ place.detail_url }}"><i class="icofont-heart"></i></a></div>
-                                 <!-- Display member plan badge -->
-                                 {% if place.promoted %}
-                                 <div class="member-plan position-absolute"><span class="badge badge-dark">Promoted</span></div>
-                                 {% endif %}
-                                 <!-- Display image with link to detail page -->
-                                 <a href="{% url 'detail' place.id %}">
-                                    <img src="{{ place.image.url }}" class="img-fluid item-img" style="width: 300px; height: 200px;">
-
-                                 </a>
-                             </div>
-                             <div class="p-3 position-relative">
-                                 <div class="list-card-body">
-                                     <!-- Display place name with link to detail page -->
-                                     <h6 class="mb-1"><a href="{{ place.detail_url }}" class="text-black">Nomi: {{ place.name }}}</a></h6>
-                                     <!-- Display cuisine types -->
-                                     <p class="text-gray mb-3">Manzil: {{ place.address }}</p>
-                                     <!-- Display estimated delivery time and cost for two -->
-                                     <p class="text-gray mb-3 time">
-                                         <span class="bg-light text-dark rounded-sm pl-2 pb-1 pt-1 pr-2"><i class="icofont-wall-clock"></i> 08:00-20:00</span>
-                                         <span class="float-right text-black-50"> Turi: {{ place.type_place }} </span>
-                                     </p>
-                                 </div>
-                                 <!-- Display offer badge and details -->
-                                 <div class="list-card-badge">
-                                     <span class="badge badge-success">OFFER</span> <small>{{ place.offer_details }}</small>
-                                 </div>
-                             </div>
-                         </div>
-                     </div>
-                     {% endfor %}
-                 </div>
+                  {% block product%}
+                  {% endblock product%}
                  <div class="col-md-12 text-center load-more">
                      <button class="btn btn-primary" type="button" disabled>
                          <span class="spinner-grow spinner-grow-sm" role="status" aria-hidden="true"></span>
