--- a/templates/base.html
+++ b/templates/base.html
@@ -23,9 +23,24 @@
       <!-- Owl Carousel -->
       <link rel="stylesheet" href="{% static 'my_app/vendor/owl-carousel/owl.carousel.css'%}">
       <link rel="stylesheet" href="{% static 'my_app/vendor/owl-carousel/owl.theme.css'%}">
+      <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+
+
 
 
    </head>
+   {% if messages %}
+         <div class="container">
+         {% for message in messages %}
+            <div class="alert alert-secondary text-dark alert-dismissible fade show" role="alert" style="background-color: bg-second;">
+               <div style="text-align: center;">{{ message }}</div>
+                        
+                   
+                  <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+               </div>
+         {% endfor %}
+         </div>
+   {% endif %}
    <body>
       <nav  class="navbar navbar-expand-lg navbar-light bg-light osahan-nav shadow-sm">
          <div class="container">
@@ -39,33 +54,21 @@
                      <a class="nav-link" href="{% url 'index' %}">Bosh sahifa <span class="sr-only">(current)</span></a>
                   </li>
                   <li class="nav-item">
-                     <a class="nav-link" href="{% url 'offers' %}"><i class="icofont-sale-discount"></i> Offers <span class="badge badge-danger">New</span></a>
+                     <a class="nav-link" href="{% url 'listing' %}"><i class="icofont-sale-discount"></i> Restoranlar <span class="badge badge-danger">New</span></a>
                   </li>
-                  <li class="nav-item dropdown">
-                     <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                     Restoranlar
-                     </a>
-                     <div class="dropdown-menu dropdown-menu-right shadow-sm border-0">
-                        <a class="dropdown-item" href="{% url 'listing' %}">Listing</a>
-                        <a class="dropdown-item" href="{% url 'checkout' %}">Checkout</a>
-                     </div>
-                  </li>
+                  
                   <li class="nav-item dropdown">
                      <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                      Pages
                      </a>
                      <div class="dropdown-menu dropdown-menu-right shadow-sm border-0">
                         <a class="dropdown-item" href="{% url 'track_order' %}">Track Order</a>
-                        <a class="dropdown-item" href="{% url 'invoice' %}">Invoice</a>
-                        <a class="dropdown-item" href="{% url 'login' %}">Login</a>
-                        <a class="dropdown-item" href="{% url 'register' %}">Register</a>
                         <a class="dropdown-item" href="{% url 'error' %}">404</a>
-                        <a class="dropdown-item" href="{% url 'extra' %}">Extra :)</a>
                      </div>
                   </li>
                   <li class="nav-item dropdown">
                      <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                     <img width="30" height="30" alt="Generic placeholder image" src="{% static 'my_app/img/user/4.png'%}" class="nav-osahan-pic rounded-pill"> My Account
+                     <img width="30" height="30" alt="Generic placeholder image" src="{{user.image.url }}" class="nav-osahan-pic rounded-pill"> {{user.first_name }}</a>
                      </a>
                      <div class="dropdown-menu dropdown-menu-right shadow-sm border-0">
                         {% if user.is_authenticated %}
@@ -80,25 +83,27 @@
                   <li class="nav-item dropdown dropdown-cart">
                      <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                      <i class="fas fa-heart"></i> Cart
-                     <span class="badge badge-success">5</span>
+                     <span class="badge badge-success" id="like_items">{{ request.session.liked_products|length }}</span>
                      </a>
                      <div class="dropdown-menu dropdown-cart-top p-0 dropdown-menu-right shadow-sm border-0">
-                        <div class="dropdown-cart-top-header p-4">
-                           <img class="img-fluid mr-3" alt="osahan" src="{% static 'my_app/img/cart.jpg">
-                           <h6 class="mb-0">Gus's World Famous Chicken</h6>
-                           <p class="text-secondary mb-0">310 S Front St, Memphis, USA</p>
-                           <small><a class="text-primary font-weight-bold" href="#">View Full Menu</a></small>
-                        </div>
+                        
                         <div class="dropdown-cart-top-body border-top p-4">
-                           <p class="mb-2"><i class="icofont-ui-press text-danger food-item"></i> Chicken Tikka Sub 12" (30 cm) x 1   <span class="float-right text-secondary">$314</span></p>
-                           <p class="mb-2"><i class="icofont-ui-press text-success food-item"></i> Corn & Peas Salad x 1   <span class="float-right text-secondary">$209</span></p>
-                           <p class="mb-2"><i class="icofont-ui-press text-success food-item"></i> Veg Seekh Sub 6" (15 cm) x 1  <span class="float-right text-secondary">$133</span></p>
-                           <p class="mb-2"><i class="icofont-ui-press text-danger food-item"></i> Chicken Tikka Sub 12" (30 cm) x 1   <span class="float-right text-secondary">$314</span></p>
-                           <p class="mb-2"><i class="icofont-ui-press text-danger food-item"></i> Corn & Peas Salad x 1   <span class="float-right text-secondary">$209</span></p>
-                        </div>
+                           {% for product in liked_products %}
+                               <div class="mb-3">
+                                   <a href="#" class="d-flex align-items-center text-decoration-none">
+                                       <img src="{{ product.photo.url }}" alt="Product Image" class="img-fluid mr-3" style="max-width: 100px; height: auto;" />
+                                       <div class="flex-grow-1">
+                                           <h6 class="mb-0">{{ product.name }}</h6>
+                                           <p class="mb-0 text-secondary">{{ product.restaurant }} </p>
+                                           <p class="mb-0 text-secondary">{{ product.price }} so'm</p>
+                                       </div>
+                                   </a>
+                               </div>
+                           {% endfor %}
+                       </div>
+                       
                         <div class="dropdown-cart-top-footer border-top p-4">
-                           <p class="mb-0 font-weight-bold text-secondary">Sub Total <span class="float-right text-dark">$499</span></p>
-                           <small class="text-info">Extra charges may apply</small>  
+                           <p class="mb-0 font-weight-bold text-secondary">Jami: <span class="float-right text-dark">{{total_price}} so'm</span></p>
                         </div>
                         <div class="dropdown-cart-top-footer border-top p-2">
                            <a class="btn btn-success btn-block btn-lg" href="checkout.html"> Checkout</a>
@@ -191,5 +196,33 @@
       <script src="{% static 'my_app/vendor/owl-carousel/owl.carousel.js'%}"></script>
       <!-- Custom scripts for all pages-->
       <script src="{% static 'my_app/js/custom.js'%}"></script>
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+      
+      <script>
+         $(document).on('click', '#heart', function(e) {
+            e.preventDefault();
+            var product_id = $(this).attr("value");
+        
+            $.ajax({
+                type: 'POST',
+                url: "{% url 'like_add' %}",
+                data: {
+                    product_id: product_id,
+                    action: 'post',
+                    csrfmiddlewaretoken: "{{ csrf_token }}"
+                },
+                success: function(response) {
+                    if (response && response.like_count !== undefined) {
+                        $('#like_items').text(response.like_count);
+                    } else {
+                        console.error('Failed to update like count.');
+                    }
+                },
+                error: function(xhr, errmsg, err) {
+                    console.error('Error:', errmsg);
+                }
+            });
+        });
+     </script>
    </body>
 </html>
