--- a/users/templates/users/my-profile.html
+++ b/users/templates/users/my-profile.html
@@ -30,7 +30,7 @@
    </head>
    <body class="sb-nav-fixed">
       <nav class="sb-topnav navbar navbar-expand navbar-light bg-white shadow-sm">
-         <a class="navbar-brand" href="index.html"><img alt="logo" src="img/logo.png"></a>
+         <a class="navbar-brand" href="index.html"><img alt="logo" src="{% static 'users/img/logo.png '%}"></a>
          <button class="btn btn-link btn-sm order-1 order-lg-0" id="sidebarToggle" href="#"><i class="fas fa-bars"></i></button>
          <!-- Navbar Search-->
          <form class="d-none d-md-inline-block form-inline ml-auto mr-0 mr-md-3 my-2 my-md-0">
@@ -74,7 +74,7 @@
                   </h6>
                   <a class="dropdown-item d-flex align-items-center" href="#">
                      <div class="dropdown-list-image mr-3">
-                        <img class="rounded-circle" src="{% static 'users/img/user/2.png" alt="">
+                        <img class="rounded-circle" src="{% static 'users/img/user/2.png'%}" alt="">
                         <div class="status-indicator bg-success"></div>
                      </div>
                      <div class="font-weight-bold overflow-hidden">
@@ -84,7 +84,7 @@
                   </a>
                   <a class="dropdown-item d-flex align-items-center" href="#">
                      <div class="dropdown-list-image mr-3">
-                        <img class="rounded-circle" src="img/user/3.png" alt="">
+                        <img class="rounded-circle" src="{% static 'users/img/user/3.png'%}" alt="">
                         <div class="status-indicator"></div>
                      </div>
                      <div class="overflow-hidden">
@@ -94,7 +94,7 @@
                   </a>
                   <a class="dropdown-item d-flex align-items-center" href="#">
                      <div class="dropdown-list-image mr-3">
-                        <img class="rounded-circle" src="img/user/4.png" alt="">
+                        <img class="rounded-circle" src="{% static 'users/img/user/4.png'%}" alt="">
                         <div class="status-indicator bg-warning"></div>
                      </div>
                      <div class="overflow-hidden">
@@ -104,7 +104,7 @@
                   </a>
                   <a class="dropdown-item d-flex align-items-center" href="#">
                      <div class="dropdown-list-image mr-3">
-                        <img class="rounded-circle" src="img/user/5.png" alt="">
+                        <img class="rounded-circle" src="{% static 'users/img/user/5.png'%}" alt="">
                         <div class="status-indicator bg-success"></div>
                      </div>
                      <div class="overflow-hidden">
@@ -165,13 +165,13 @@
             <!-- Nav Item - User Information -->
             <li class="nav-item dropdown no-arrow ml-1 osahan-profile-dropdown">
                <a class="nav-link dropdown-toggle pr-0" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-               <img class="img-profile rounded-circle" src="img/user/1.png">
+               <img class="img-profile rounded-circle" src="{% static 'users/img/user/1.png'%}">
                </a>
                <!-- Dropdown - User Information -->
                <div class="dropdown-menu dropdown-menu-right shadow-sm">
                   <div class="p-3 d-flex align-items-center">
                      <div class="dropdown-list-image mr-3">
-                        <img class="rounded-circle" src="img/user/1.png" alt="">
+                        <img class="rounded-circle" src="{% static 'users/img/user/1.png'%}" alt="">
                         <div class="status-indicator bg-success"></div>
                      </div>
                      <div class="font-weight-bold">
@@ -496,11 +496,11 @@
          </div>
       </div>
       <!-- Jquery -->
-      <script src="{% static 'users/vendor/jquery/jquery.min.js'%}"></script>
+      <script src="{% static 'users/vendor/jquery/jquery.min.js '%}"></script>
       <!-- Fontawesome -->
-      <script src="{% static 'users/vendor/fontawesome/js/all.min.js'%}"></script>
+      <script src="{% static 'users/vendor/fontawesome/js/all.min.js '%}"></script>
       <!-- Bootstrap -->
-      <script src="{% static 'users/vendor/bootstrap/js/bootstrap.bundle.min.js'%}"></script>
+      <script src="{% static 'users/vendor/bootstrap/js/bootstrap.bundle.min.js '%}"></script>
       <!-- Custom Js -->
       <script src="{% static 'users/js/scripts.js'%}"></script>
       <!-- Ajax Chart Js -->
