--- a/my_app/templates/my_app/listing.html
+++ b/my_app/templates/my_app/listing.html
@@ -137,7 +137,7 @@
                  <div class="col-md-12 text-center load-more">
                      <button class="btn btn-primary" type="button" disabled>
                          <span class="spinner-grow spinner-grow-sm" role="status" aria-hidden="true"></span>
-                         Loading...
+                         Yangiliklar qo'shilishini kuting
                      </button>  
                  </div>
                   </div>
