--- a/users/templates/users/my-profile.html
+++ b/users/templates/users/my-profile.html
@@ -16,16 +16,17 @@
                            </a>
                            <div class="row">
                               <div class="col-md-4">
-                                 <div class="row form-group">
-                                   <div>
-                                       <label>Your photo</label>
-                                       <form action="/file-upload" class="dropzone dz-clickable">
-                                          <div class="dz-default dz-message"><span>Drop files here to upload</span></div>
-                                       </form>
-                                   </div>
-                                   <div>hello world</div>
+                                 <img class="img-profile rounded-circle" src="{{user.image.url }}">
+
+                                 <div class="form-group">
+                                    <label>Your photo</label>
+
+                                    <form action="/file-upload" class="dropzone dz-clickable">
+                                       <div class="dz-default dz-message"><span>Drop files here to upload</span></div>
+
+                                    </form>
                                  </div>
-                              </div>            
+                              </div>
                               <div class="col-md-8 add_top_30">
                                  <div class="row">
                                     <div class="col-md-6">
@@ -41,6 +42,7 @@
                                        </div>
                                     </div>
                                  </div>
+                                 <!-- /row-->
                                  <!-- /row-->
                                  <div class="row">
                                     <div class="col-md-6">
@@ -96,31 +98,7 @@
                               </div>
                            </div>
                         </div>
-                        <div class="col-md-6">
-                           <div class="card mb-4 order-list">
-                              <div class="gold-members">
-                                 <div class="box_general padding_bottom">
-                                    <div class="header_box version_2 border-bottom p-3">
-                                       <h6 class="m-0"><i class="fa fa-envelope text-muted mr-2"></i>Change email</h6>
-                                    </div>
-                                    <div class="p-3">
-                                       <div class="form-group">
-                                          <label>Old email</label>
-                                          <input class="form-control" name="old_email" id="old_email" type="email">
-                                       </div>
-                                       <div class="form-group">
-                                          <label>New email</label>
-                                          <input class="form-control" name="new_email" id="new_email" type="email">
-                                       </div>
-                                       <div class="form-group">
-                                          <label>Confirm new email</label>
-                                          <input class="form-control" name="confirm_new_email" id="confirm_new_email" type="email">
-                                       </div>
-                                    </div>
-                                 </div>
-                              </div>
-                           </div>
-                        </div>
+                        
                      </div>
                      <div class="save mb-2">
                         <a href="#" class="btn btn-success">Save</a>
